Fix scrollbar visibility: use grid overlay and robust scrollability check

--- a/client/src/components/UI/CustomScrollbar/CustomScrollbar.module.css
+++ b/client/src/components/UI/CustomScrollbar/CustomScrollbar.module.css
@@ -4,14 +4,18 @@
   width: 100%;
   height: 100%;
   overflow: hidden;
+  display: grid;
+  grid-template-columns: 1fr;
+  grid-template-rows: 1fr;
 }
 
 .scrollableArea {
+  grid-area: 1 / 1 / 2 / 2;
   width: 100%;
   height: 100%;
   overflow-y: scroll;
   overflow-x: hidden;
-  padding-right: 0;
+  padding-right: 10px; /* Prevent overlap with content */
   scrollbar-width: none;
   -ms-overflow-style: none;
 }
@@ -21,7 +25,9 @@
 }
 
 .track {
-  position: absolute;
+  grid-area: 1 / 1 / 2 / 2;
+  justify-self: end;
+  position: relative;
   top: 0;
   right: 2px;
   bottom: 0;
